<resources>

    <string name="app_name">ThinkWell</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_schedule">ScheduleActivity</string>
    <string name="title_diary">DiaryActivity</string>
    <string name="title_financy">FinancyActivity</string>
    <string name="date">日期</string>
    <string name="add">添加</string>
    <string name="diary">日记</string>
    <string name="financy">理财</string>
	<string name="event">时间</string>
	<string name="project">项目</string>
	<string name="schedule">日程</string>
</resources>